[gd_scene load_steps=18 format=2]

[ext_resource path="res://wpnsys/hurt_stuff/statusThing.gd" type="Script" id=1]
[ext_resource path="res://wpnsys/hurt_stuff/hurt_component.gd" type="Script" id=2]
[ext_resource path="res://state_machine/state_machine.gd" type="Script" id=3]
[ext_resource path="res://raw_sprites/scorpion.png" type="Texture" id=4]
[ext_resource path="res://scenes/enemies/introscorpion/enemy.gd" type="Script" id=5]
[ext_resource path="res://scripts/physicsthings.gd" type="Script" id=6]
[ext_resource path="res://scenes/enemies/introscorpion/Attack.gd" type="Script" id=7]
[ext_resource path="res://scenes/enemies/introscorpion/walk.gd" type="Script" id=8]
[ext_resource path="res://scenes/enemies/introscorpion/scorpiona.gd" type="Script" id=9]
[ext_resource path="res://n_plr_detector.gd" type="Script" id=10]
[ext_resource path="res://scenes/enemies/introscorpion/Flippables.gd" type="Script" id=11]
[ext_resource path="res://scenes/enemies/introscorpion/idunno.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 24, 12 )

[sub_resource type="CircleShape2D" id=8]
radius = 240.533

[sub_resource type="Animation" id=10]
resource_name = "attack"
length = 0.283
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
length = 0.003
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 3, 4 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk"
length = 0.221
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Flippables/Icon:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="TestScorpionE" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 40
script = ExtResource( 5 )

[node name="Flippables" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource( 11 )

[node name="Icon" type="Sprite" parent="Flippables"]
unique_name_in_owner = true
texture = ExtResource( 4 )
hframes = 5
frame = 2

[node name="HurtComponent" type="Area2D" parent="."]
visible = false
script = ExtResource( 2 )
is_enemy = true
path_entitystatus = NodePath("../StatusThing")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
shape = SubResource( 7 )

[node name="StatusThing" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 12 )
shape = SubResource( 7 )

[node name="PhysicsStuff" type="Node" parent="."]
script = ExtResource( 6 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("idunno")

[node name="State" type="Node" parent="StateMachine"]
script = ExtResource( 8 )
think_state_path = NodePath("../idunno")

[node name="idunno" type="Node" parent="StateMachine"]
script = ExtResource( 12 )
idle_state_path = NodePath("../State")
attack_state_path = NodePath("../Attack")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
think_state_path = NodePath("../idunno")
dir_state_path = NodePath("../State")

[node name="Timer" type="Timer" parent="StateMachine/Attack"]
wait_time = 1.5
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
unique_name_in_owner = true
modulate = Color( 0.788235, 0, 0, 1 )
enabled = true
cast_to = Vector2( -32, 32 )
collision_mask = 32

[node name="NewPlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0
script = ExtResource( 10 )
cantaimY = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NewPlayerDetector"]
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/walk = SubResource( 9 )
script = ExtResource( 9 )

[connection signal="entered_hitstun" from="." to="AnimationPlayer" method="_on_TestScorpionE_entered_hitstun"]
[connection signal="died" from="HurtComponent" to="." method="_on_HurtComponent_died"]
[connection signal="hurted" from="HurtComponent" to="." method="_on_HurtComponent_hurted"]
[connection signal="entered" from="StateMachine/State" to="AnimationPlayer" method="_on_State_entered"]
[connection signal="entered" from="StateMachine/Attack" to="AnimationPlayer" method="_on_Attack_entered"]
[connection signal="play_attack_anim" from="StateMachine/Attack" to="AnimationPlayer" method="_on_Attack_play_attack_anim"]
[connection signal="timeout" from="StateMachine/Attack/Timer" to="StateMachine/Attack" method="_on_Timer_timeout"]
[connection signal="target_detected" from="NewPlayerDetector" to="StatusThing" method="_on_NewPlayerDetector_target_detected"]
[connection signal="target_invisible" from="NewPlayerDetector" to="StatusThing" method="_on_NewPlayerDetector_target_invisible"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine/Attack" method="_on_AnimationPlayer_animation_finished"]
